--- a/ContactUs.html
+++ b/ContactUs.html
@@ -151,6 +151,6 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Your external JS (validation + SweetAlert usage) -->
-    <script src="contact.js"></script>
+    <script src="Contact.js"></script>
   </body>
 </html>
