Fixed the dot menu responsiveness on smaller screens

--- a/ContactUs.html
+++ b/ContactUs.html
@@ -152,5 +152,5 @@
 
     <!-- Your external JS (validation + SweetAlert usage) -->
     <script src="Contact.js"></script>
-  </body>
+  </body>g
 </html>
